# server

./: makefile  pyproject.toml
server/: main.py
server/api/v1/: __init__.py  health_check.py
