[tool.poetry]
name = "server"
version = "0.1.0"
description = "Servers"
authors = [ "Benjamin Labrecque" ]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
trio = "^0.22.0"
hypercorn = "^0.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.mypy]
files = "testing"
strict = true
namespace_packages = true
explicit_package_bases = true